--- a/Dayna.css
+++ b/Dayna.css
@@ -17,8 +17,8 @@
     background-color: blueviolet; /* Change background color for active link */
     color: #fff; /* Change text color for active link */
   }
-  body { background-color: aqua
-    ;}
+  body { background-color: aqua;
+  box-shadow: 12px black;}
     
 .box-header{ 
     background-color: palevioletred;
@@ -26,10 +26,12 @@ padding: 10px 20px;
 border: 10px solid black;
 margin-block-end: 10px;
 margin-right: 10px;
-width: 1420px;}
+width: 1420px;
+}
 
-img{ 
-    float: right;
+img {
+  width: 200px;
+  float: right;
 }
 
 p{
@@ -44,35 +46,42 @@ p{
   padding: 3px;
   width: 860px; /* Adjust width as needed */
   margin: 10px;
-  height: 800px;
-  display: flex;
-  justify-content: center;
+  height: 890px;
 }
 
 
 
-.box {
-    display: grid;
-    grid-template-columns: 3px 6px; /* Create 3 columns */
-    grid-gap: 40px; /* Add spacing between grid items */
-  }
-  
- 
-  .body{
-    background-color: aqua;
-  }
-
-  #box-1{
-    grid-area: box1;
+.box{
+  display: grid;
+  grid-template-columns: 1fr; /* One column for simplicity */
+  grid-gap: 20px; /* Space between grid items */
 }
 
-#box-2{
-    grid-area: box2;
+header {
+  grid-column: 1 / span 1; /* Span one column */
+  background-color: #333; /* Example background color */
+  color: #fff;
+  padding: 20px;
 }
 
-#box-3{
-    grid-area: box3;
+.section {
+  grid-column: 1 / span 1;
+  text-align: center;
 }
-#box-4{
-    grid-area: box4;
+
+.h2 {
+  grid-column: 1 / span 1;
+  padding: 20px;
+  border: 1px solid #ccc;
 }
+
+.img {
+  width: 100%; /* Make images responsive */
+  margin-top: 20px;
+}
+
+
+
+
+
+
